# lucidlaw-triage

./: .gitignore  ARCHITECTURE.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: __init__.py  config.py  logging_config.py  main.py  schemas.py
backend/app/triage/: __init__.py  categories.py  engine.py  guardrails.py  prompt.py  tool.py
backend/tests/: conftest.py  test_categories.py  test_engine.py  test_engine_live.py  test_guardrails.py  test_schemas.py
frontend/: .dockerignore  .env.local.example  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ExampleChips.tsx  ResultCard.tsx  ResultSkeleton.tsx  TriageForm.tsx
frontend/lib/: api.ts  types.ts
