[project]
name = "lucidlaw-triage-api"
version = "1.0.0"
description = "Plain-language legal triage engine for LucidLaw, built on Claude."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# A pragmatic, industrial selection: pyflakes, pycodestyle, isort, pyupgrade,
# bugbear, comprehensions, and simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "live: tests that call the real Anthropic API (require ANTHROPIC_API_KEY)",
]
